# lira

./: .dockerignore  .env.example  .eslintignore  .gitignore  .slither.config.json  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend-go  Dockerfile.backend-java  Dockerfile.backend-php  Dockerfile.frontend  Dockerfile.mobile-backend  Dockerfile.web  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  POLISH_COMPLETION_REPORT.md  README.md  cypress.config.js  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  ecosystem.config.js  hardhat.config.js  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
contracts/: AgentExecutor.sol  LiraAccessToken.sol  LiraProfile.sol  LiraReputationToken.sol  LiraSocialGraph.sol  LiraSocialToken.sol  LiraToken.sol  LiraTokenRegistry.sol  LiraUserTokenFactory.sol  TokenLaunchFactory.sol
core-engine/: Cargo.toml  Dockerfile  README.md
core-engine/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  validator.rs  wasm_bindings.rs
database/: schema.sql
docs/: API.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_STATUS.md  GOVERNANCE_INTEGRATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  LIRA_MAIN_TOKEN.md  LIRA_SOCIAL.md  LIRA_SOCIAL_IMPLEMENTATION.md  PHASE_5-8_FINAL_STATUS.md  PRODUCTION_HARDENING.md  QUICKSTART.md  RBAC_DASHBOARDS.md  README.md  REMAINING_WORK.md  SECURITY_AUDIT.md  SESSION_SUMMARY.md  SMARTWALLET_AUTH.md  TESTING.md  (+1 more)
(+182 files in other folders)
