[package]
name = "lira-core"
version = "0.1.0"
edition = "2021"
description = "Lira DSL core engine — WASM-compatible parser and safety-first compiler"
license = "MIT"
repository = "https://github.com/SMSDAO/lira"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# WASM-optional deps (only compiled for the `wasm` feature target)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# No extra test deps needed — stdlib + serde are sufficient.

[profile.release]
opt-level = "s"   # minimise WASM binary size
lto = true
